k8s/config-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: proyecto-final
spec:
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
