k8s/config-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-server-ingress
  namespace: proyecto-final
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: config-server
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: config-server
                port:
                  number: 8888
